...
                            Text("Add a medication to get started.")
                                .foregroundStyle(.secondary)

                            Button {
                                newMedicationSheetIsPresented.toggle()
                            } label: {
                                Label("Add Medication", systemImage: "plus")
                            }
                     
                        }
                        .frame(maxWidth: .infinity, maxHeight: .infinity)
                        .multilineTextAlignment(.center)
                        .padding()
...
                        .contextMenu {
                            Button(role: .destructive) {
                                withAnimation {
                                    modelContext.delete(med)
                                }
                            } label: {
                                Text("Delete")
                            }
                        }
                        .swipeActions(edge: .leading) {
                            Button("Take") {
                                takeMedication(med)
                            }
                            .tint(.green)
                        }
                        .swipeActions(edge: .trailing) {
                            Button(role: .destructive) {
...
                }
            }
        } detail: {
            if let med = selectedMed {
                MedicationDetailView(med: med)
            } else {
                Text("Select an item")
            }
        }
        .sheet(isPresented: $newMedicationSheetIsPresented) {
            NewMedicationSheet()
        }
        .sheet(isPresented: $showShareSheet) {
...
