...
    case puff = "Puff"
    case application = "Application"
    var id: String { self.rawValue }
}

enum MedicationType: String, CaseIterable, Identifiable {
    case prescription = "Prescription"
    case nonPrescription = "Non-Prescription"
    var id: String { self.rawValue }
}

enum MedicationForm: String, CaseIterable, Identifiable, Codable {
    case tablet = "Tablet"
    case capsule = "Capsule"
...
